@@ -1,3 +1,5 @@
+* Make compileSelector() handle attribute case sensitivity properly. [jddalton]
+
 * Make INSENSITIVE_TABLE defined by feature test instead of docType sniff because many pages are sent with the wrong mime type causing XHTML to be processed as invalid HTML. [jddalton]
 
 * Make client_api() cache empty results. [jddalton]
